--- a/Question.html
+++ b/Question.html
@@ -34,7 +34,7 @@
                 <!-- Logo & Title -->
                 <div>
                     <ul class="flex items-center gap-2">
-                        <img class="w-6" src="/assets/logo.png" alt="Logo">
+                        <img class="w-6" src="assets/logo.png" alt="Logo">
                         <li class="text-lg font-semibold"><a href="#">DevBoard</a></li>
                     </ul>
                 </div>
